--- a/manual/emacspeak_002dbookshare.html
+++ b/manual/emacspeak_002dbookshare.html
@@ -82,33 +82,8 @@
   is placed in <em>emacspeak-bookshare-mode</em>. Se the help for
   that mode on detailed usage instructions and
   key-bindings.</p><span id="Sample-Interaction"></span>
-  <h4 class="subsection">12.23.3 Sample Interaction</h4>
-  <p>Assuming you have correctly setup your API key:</p>
-  <ul>
-    <li>Customize group <code>emacspeak-bookshare</code> by
-    pressing <kbd>C-h G</kbd>.</li>
-    <li>Press <kbd>C-e C-b</kbd> to open or switch to the Bookshare
-    buffer.</li>
-    <li>Perform a search <kbd>a</kbd> or <kbd>t</kbd> for author or
-    title search.</li>
-    <li>You will be prompted for your Bookshare password if this is
-    the first time.</li>
-    <li>The password will be saved to your configured
-    <code>auth-source</code> — usually
-    <code>~/.authinfo.gpg</code>. You can also use
-    <code>password-store[.]</code></li>
-    <li>The results of the search appear in the Bookshare buffer.
-    Audio formatting and auditory icons convey if a result is
-    already available locally.</li>
-    <li>If not available locally, press <kbd>D</kbd> to download
-    the content.</li>
-    <li>Press <kbd>U</kbd> to unpack the downloaded content.</li>
-    <li>Press <kbd>e</kbd> to display the entire book.</li>
-    <li>Press <kbd>c</kbd> to display the table of contents.</li>
-    <li>Now, use all of EWW See <a href=
-    "emacspeak_002deww.html">emacspeak-eww</a> extensions and
-    profit!</li>
-  </ul><span id="Emacspeak_002dBookshare-Commands"></span>
+  <h4 class="subsection">12.23.3 Sample Interaction</h4><span id=
+  "Emacspeak_002dBookshare-Commands"></span>
   <h4 class="subsection">12.23.4 Emacspeak-Bookshare
   Commands</h4><span id="emacspeak_002dbookshare-2"></span>
   <h4 class="subsubsection">12.23.4.1 emacspeak-bookshare</h4>
@@ -933,7 +908,7 @@ Make sure it’s downloaded and unpacked first.
   </dl><span id="emacspeak_002dbookshare-Options"></span>
   <h4 class="subsection">12.23.5 emacspeak-bookshare Options</h4>
   <dl>
-    <dt id="index-User-Option-102">Variable: <strong>User
+    <dt id="index-User-Option-97">Variable: <strong>User
     Option</strong> <em>emacspeak-bookshare-api-key</em></dt>
     <dd>
       <p>Web API key for this application. See
@@ -942,7 +917,7 @@ Make sure it’s downloaded and unpacked first.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-103">Variable: <strong>User
+    <dt id="index-User-Option-98">Variable: <strong>User
     Option</strong> <em>emacspeak-bookshare-directory</em></dt>
     <dd>
       <p>Customize this to the root of where books are
