--- a/manual/emacspeak_002dcalendar.html
+++ b/manual/emacspeak_002dcalendar.html
@@ -66,10 +66,7 @@
   <hr />
   <span id="emacspeak_002dcalendar-1"></span>
   <h3 class="section">12.30 emacspeak-calendar</h3>
-  <p>This module speech enables the Emacs Calendar. Speech enabling
-  is not the same as speaking the screen: This is an excellent
-  example of the advantages of speech-enabled
-  interaction.</p><span id=
+  <p>This module speech enables the Emacs Calendar.</p><span id=
   "Emacspeak_002dCalendar-Commands"></span>
   <h4 class="subsection">12.30.1 Emacspeak-Calendar
   Commands</h4><span id=
@@ -151,7 +148,7 @@ To use, configure variable gmaps-my-address via M-x customize-variable.
   </dl><span id="emacspeak_002dcalendar-Options"></span>
   <h4 class="subsection">12.30.2 emacspeak-calendar Options</h4>
   <dl>
-    <dt id="index-User-Option-105">Variable: <strong>User
+    <dt id="index-User-Option-100">Variable: <strong>User
     Option</strong> <em>voice-calendar-today</em></dt>
     <dd>
       <p>Personality used for calendar-today This personality uses
@@ -160,7 +157,7 @@ To use, configure variable gmaps-my-address via M-x customize-variable.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-106">Variable: <strong>User
+    <dt id="index-User-Option-101">Variable: <strong>User
     Option</strong> <em>voice-diary</em></dt>
     <dd>
       <p>Personality used for diary This personality uses
@@ -169,7 +166,7 @@ To use, configure variable gmaps-my-address via M-x customize-variable.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-107">Variable: <strong>User
+    <dt id="index-User-Option-102">Variable: <strong>User
     Option</strong> <em>voice-holiday</em></dt>
     <dd>
       <p>Personality used for holiday This personality uses
