--- a/manual/emacspeak_002dchess.html
+++ b/manual/emacspeak_002dchess.html
@@ -68,94 +68,11 @@
   <h3 class="section">12.31 emacspeak-chess</h3>
   <p>The Emacs Chess package provides a rich environment for
   playing and exploring Chess Games. That package comes with a
-  light-weight module that announces moves.</p>
-  <p>This module aims do do much more, including:</p>
-  <ul>
-    <li>Navigate the board along various axies with audio-formatted
-    output.</li>
-    <li>Browse games via rich audio-formatted output.</li>
-    <li>Speech-enable all interactive commands provided by the
-    Chess package.</li>
-    <li>Enable various means of exploring the state of game,
-    perhaps with a view to being able to spot patterns from
-    listening to the output.</li>
-  </ul><span id="Navigating-And-Examining-The-Board"></span>
-  <h4 class="subsection">12.31.1 Navigating And Examining The
-  Board</h4>
-  <p>The board can be navigated along the 8 compass directions.
-  Arrow keys move to the appropriate squares on the board.
-  <kbd>/</kbd> and <kbd>\</kbd> move down the diagonals.
-  <kbd>[</kbd> and <kbd>]</kbd> move up the respective
-  diagonals.</p>
-  <ul>
-    <li>Move North: <code>emacspeak-chess-north</code> bound to
-    <kbd>up</kbd>.</li>
-    <li>Move South: <code>emacspeak-chess-south</code> bound to
-    <kbd>down</kbd>.</li>
-    <li>Move West: <code>emacspeak-chess-west</code> bound to
-    <kbd>left</kbd>.</li>
-    <li>Move East: <code>emacspeak-chess-east</code> bound to
-    <kbd>right</kbd>.</li>
-  </ul>
-  <p>You can also move along the diagonals:</p>
-  <ul>
-    <li>Move Northwest: <code>emacspeak-chess-northwest</code>
-    bound to <kbd>[</kbd>.</li>
-    <li>Move Northeast: <code>emacspeak-chess-northeast</code>
-    bound to <kbd>]</kbd>.</li>
-    <li>Move Southwest: <code>emacspeak-chess-southwest</code>
-    bound to <kbd>/</kbd>.</li>
-    <li>Move Southeast: <code>emacspeak-chess-southeast</code>
-    bound to <kbd>\</kbd>.</li>
-  </ul>
-  <p>You can also jump to a given board position by:</p>
-  <ul>
-    <li>Jump: <code>emacspeak-chess-jump</code> bound to
-    <kbd>j</kbd>.</li>
-    <li>Target of last move:
-    <code>emacspeak-chess-goto-target</code> bound to
-    <kbd>t</kbd>.</li>
-    <li>Look: <code>emacspeak-chess-speak-that-square</code> bound
-    to <kbd>l</kbd>.</li>
-    <li>Review current square: <kbd>;</kbd>.</li>
-    <li>Review Board: <code>emacspeak-chess-speak-board</code>
-    bound to <kbd>z</kbd>. Useful in end-state.</li>
-    <li>Locate pieces:
-    <code>emacspeak-chess-speak-piece-squares</code> bound to
-    <kbd>s</kbd>. Specify piece as a single char — <kbd>w</kbd>
-    speaks all white pieces, <kbd>l</kbd> speaks all black pieces,
-    use SAN notation char for a specific piece. Use <kbd>a</kbd> to
-    hear entire board, this last is most useful when the game is an
-    end-state.</li>
-    <li>Discover who targets a square:
-    <code>emacspeak-chess-speak-who-targets</code> bound to
-    <kbd>w</kbd>. Argument <code>piece</code> is similar to the
-    previously listed command.</li>
-  </ul>
-  <p>You can obtain views of the board along the rows and
-  diagonals, as well as a <em>knight’s perspective</em> :</p>
-  <ul>
-    <li>Viewers: <kbd>v</kbd> followed by the directional
-    navigation keys speaks the squares in that direction from the
-    current square. <kbd>vn</kbd> speaks the squares from a
-    knight’s perspective, i.e. the squares the Knight would see
-    from the current position. similarly, <kbd>vk</kbd> speaks the
-    non-empty squares seen by the King from the current position.
-    <kbd>v</kbd> followed by a rank-or-file char speaks that
-    complete rank or file.</li>
-  </ul><span id="Examining-Games"></span>
-  <h4 class="subsection">12.31.2 Examining Games</h4>
-  <p>Package <em>Chess</em> allows one to browse through a game
-  using <kbd>,</kbd> and <kbd>.</kbd> —
-  <code>chess-display-move-backward</code> and
-  <code>chess-display-move-forward</code>. Emacspeak speech-enables
-  these commands to speak the move that led to the currently
-  displayed state of the game. Finally, <kbd>m</kbd> speaks the
-  <em>current move</em> being displayed.</p><span id=
+  light-weight module that announces moves.</p><span id=
   "Emacspeak_002dChess-Commands"></span>
-  <h4 class="subsection">12.31.3 Emacspeak-Chess
+  <h4 class="subsection">12.31.1 Emacspeak-Chess
   Commands</h4><span id="emacspeak_002dchess_002deast"></span>
-  <h4 class="subsubsection">12.31.3.1 emacspeak-chess-east</h4>
+  <h4 class="subsubsection">12.31.1.1 emacspeak-chess-east</h4>
   <dl>
     <dt id="index-emacspeak_002dchess_002deast">Command:
     <strong>emacspeak-chess-east</strong></dt>
@@ -167,7 +84,7 @@
       </div>
     </dd>
   </dl><span id="emacspeak_002dchess_002dgoto_002dtarget"></span>
-  <h4 class="subsubsection">12.31.3.2
+  <h4 class="subsubsection">12.31.1.2
   emacspeak-chess-goto-target</h4>
   <dl>
     <dt id="index-emacspeak_002dchess_002dgoto_002dtarget">Command:
@@ -181,7 +98,7 @@
       </div>
     </dd>
   </dl><span id="emacspeak_002dchess_002djump"></span>
-  <h4 class="subsubsection">12.31.3.3 emacspeak-chess-jump</h4>
+  <h4 class="subsubsection">12.31.1.3 emacspeak-chess-jump</h4>
   <dl>
     <dt id="index-emacspeak_002dchess_002djump">Command:
     <strong>emacspeak-chess-jump</strong> <em>(coord)</em></dt>
@@ -195,7 +112,7 @@
       </div>
     </dd>
   </dl><span id="emacspeak_002dchess_002dlook_002deast"></span>
-  <h4 class="subsubsection">12.31.3.4
+  <h4 class="subsubsection">12.31.1.4
   emacspeak-chess-look-east</h4>
   <dl>
     <dt id="index-emacspeak_002dchess_002dlook_002deast">Command:
@@ -209,7 +126,7 @@
       </div>
     </dd>
   </dl><span id="emacspeak_002dchess_002dlook_002dking"></span>
-  <h4 class="subsubsection">12.31.3.5
+  <h4 class="subsubsection">12.31.1.5
   emacspeak-chess-look-king</h4>
   <dl>
     <dt id="index-emacspeak_002dchess_002dlook_002dking">Command:
@@ -224,7 +141,7 @@
       </div>
     </dd>
   </dl><span id="emacspeak_002dchess_002dlook_002dknight"></span>
-  <h4 class="subsubsection">12.31.3.6
+  <h4 class="subsubsection">12.31.1.6
   emacspeak-chess-look-knight</h4>
   <dl>
     <dt id="index-emacspeak_002dchess_002dlook_002dknight">Command:
@@ -239,7 +156,7 @@
       </div>
     </dd>
   </dl><span id="emacspeak_002dchess_002dlook_002dnorth"></span>
-  <h4 class="subsubsection">12.31.3.7
+  <h4 class="subsubsection">12.31.1.7
   emacspeak-chess-look-north</h4>
   <dl>
     <dt id="index-emacspeak_002dchess_002dlook_002dnorth">Command:
@@ -254,7 +171,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dchess_002dlook_002dnortheast"></span>
-  <h4 class="subsubsection">12.31.3.8
+  <h4 class="subsubsection">12.31.1.8
   emacspeak-chess-look-northeast</h4>
   <dl>
     <dt id="index-emacspeak_002dchess_002dlook_002dnortheast">
@@ -269,7 +186,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dchess_002dlook_002dnorthwest"></span>
-  <h4 class="subsubsection">12.31.3.9
+  <h4 class="subsubsection">12.31.1.9
   emacspeak-chess-look-northwest</h4>
   <dl>
     <dt id="index-emacspeak_002dchess_002dlook_002dnorthwest">
@@ -283,7 +200,7 @@
       </div>
     </dd>
   </dl><span id="emacspeak_002dchess_002dlook_002dsouth"></span>
-  <h4 class="subsubsection">12.31.3.10
+  <h4 class="subsubsection">12.31.1.10
   emacspeak-chess-look-south</h4>
   <dl>
     <dt id="index-emacspeak_002dchess_002dlook_002dsouth">Command:
@@ -298,7 +215,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dchess_002dlook_002dsoutheast"></span>
-  <h4 class="subsubsection">12.31.3.11
+  <h4 class="subsubsection">12.31.1.11
   emacspeak-chess-look-southeast</h4>
   <dl>
     <dt id="index-emacspeak_002dchess_002dlook_002dsoutheast">
@@ -313,7 +230,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dchess_002dlook_002dsouthwest"></span>
-  <h4 class="subsubsection">12.31.3.12
+  <h4 class="subsubsection">12.31.1.12
   emacspeak-chess-look-southwest</h4>
   <dl>
     <dt id="index-emacspeak_002dchess_002dlook_002dsouthwest">
@@ -327,7 +244,7 @@
       </div>
     </dd>
   </dl><span id="emacspeak_002dchess_002dlook_002dwest"></span>
-  <h4 class="subsubsection">12.31.3.13
+  <h4 class="subsubsection">12.31.1.13
   emacspeak-chess-look-west</h4>
   <dl>
     <dt id="index-emacspeak_002dchess_002dlook_002dwest">Command:
@@ -341,7 +258,7 @@
       </div>
     </dd>
   </dl><span id="emacspeak_002dchess_002dnorth"></span>
-  <h4 class="subsubsection">12.31.3.14 emacspeak-chess-north</h4>
+  <h4 class="subsubsection">12.31.1.14 emacspeak-chess-north</h4>
   <dl>
     <dt id="index-emacspeak_002dchess_002dnorth">Command:
     <strong>emacspeak-chess-north</strong></dt>
@@ -353,7 +270,7 @@
       </div>
     </dd>
   </dl><span id="emacspeak_002dchess_002dnortheast"></span>
-  <h4 class="subsubsection">12.31.3.15
+  <h4 class="subsubsection">12.31.1.15
   emacspeak-chess-northeast</h4>
   <dl>
     <dt id="index-emacspeak_002dchess_002dnortheast">Command:
@@ -366,7 +283,7 @@
       </div>
     </dd>
   </dl><span id="emacspeak_002dchess_002dnorthwest"></span>
-  <h4 class="subsubsection">12.31.3.16
+  <h4 class="subsubsection">12.31.1.16
   emacspeak-chess-northwest</h4>
   <dl>
     <dt id="index-emacspeak_002dchess_002dnorthwest">Command:
@@ -379,7 +296,7 @@
       </div>
     </dd>
   </dl><span id="emacspeak_002dchess_002dsouth"></span>
-  <h4 class="subsubsection">12.31.3.17 emacspeak-chess-south</h4>
+  <h4 class="subsubsection">12.31.1.17 emacspeak-chess-south</h4>
   <dl>
     <dt id="index-emacspeak_002dchess_002dsouth">Command:
     <strong>emacspeak-chess-south</strong></dt>
@@ -391,7 +308,7 @@
       </div>
     </dd>
   </dl><span id="emacspeak_002dchess_002dsoutheast"></span>
-  <h4 class="subsubsection">12.31.3.18
+  <h4 class="subsubsection">12.31.1.18
   emacspeak-chess-southeast</h4>
   <dl>
     <dt id="index-emacspeak_002dchess_002dsoutheast">Command:
@@ -404,7 +321,7 @@
       </div>
     </dd>
   </dl><span id="emacspeak_002dchess_002dsouthwest"></span>
-  <h4 class="subsubsection">12.31.3.19
+  <h4 class="subsubsection">12.31.1.19
   emacspeak-chess-southwest</h4>
   <dl>
     <dt id="index-emacspeak_002dchess_002dsouthwest">Command:
@@ -417,7 +334,7 @@
       </div>
     </dd>
   </dl><span id="emacspeak_002dchess_002dspeak_002dboard"></span>
-  <h4 class="subsubsection">12.31.3.20
+  <h4 class="subsubsection">12.31.1.20
   emacspeak-chess-speak-board</h4>
   <dl>
     <dt id="index-emacspeak_002dchess_002dspeak_002dboard">Command:
@@ -433,7 +350,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dchess_002dspeak_002dpiece_002dsquares"></span>
-  <h4 class="subsubsection">12.31.3.21
+  <h4 class="subsubsection">12.31.1.21
   emacspeak-chess-speak-piece-squares</h4>
   <dl>
     <dt id=
@@ -457,7 +374,7 @@ and ‘a’ for entire board..
     </dd>
   </dl><span id=
   "emacspeak_002dchess_002dspeak_002dthat_002dsquare"></span>
-  <h4 class="subsubsection">12.31.3.22
+  <h4 class="subsubsection">12.31.1.22
   emacspeak-chess-speak-that-square</h4>
   <dl>
     <dt id=
@@ -476,7 +393,7 @@ and ‘a’ for entire board..
     </dd>
   </dl><span id=
   "emacspeak_002dchess_002dspeak_002dthis_002dmove"></span>
-  <h4 class="subsubsection">12.31.3.23
+  <h4 class="subsubsection">12.31.1.23
   emacspeak-chess-speak-this-move</h4>
   <dl>
     <dt id="index-emacspeak_002dchess_002dspeak_002dthis_002dmove">
@@ -491,7 +408,7 @@ and ‘a’ for entire board..
     </dd>
   </dl><span id=
   "emacspeak_002dchess_002dspeak_002dthis_002dsquare"></span>
-  <h4 class="subsubsection">12.31.3.24
+  <h4 class="subsubsection">12.31.1.24
   emacspeak-chess-speak-this-square</h4>
   <dl>
     <dt id=
@@ -508,7 +425,7 @@ and ‘a’ for entire board..
     </dd>
   </dl><span id=
   "emacspeak_002dchess_002dspeak_002dwho_002dtargets"></span>
-  <h4 class="subsubsection">12.31.3.25
+  <h4 class="subsubsection">12.31.1.25
   emacspeak-chess-speak-who-targets</h4>
   <dl>
     <dt id=
@@ -530,7 +447,7 @@ Argument ‘piece’ specifies  piece-or-color as in command
     </dd>
   </dl><span id=
   "emacspeak_002dchess_002dview_002drank_002dor_002dfile"></span>
-  <h4 class="subsubsection">12.31.3.26
+  <h4 class="subsubsection">12.31.1.26
   emacspeak-chess-view-rank-or-file</h4>
   <dl>
     <dt id=
@@ -548,7 +465,7 @@ Argument ‘piece’ specifies  piece-or-color as in command
       </div>
     </dd>
   </dl><span id="emacspeak_002dchess_002dwest"></span>
-  <h4 class="subsubsection">12.31.3.27 emacspeak-chess-west</h4>
+  <h4 class="subsubsection">12.31.1.27 emacspeak-chess-west</h4>
   <dl>
     <dt id="index-emacspeak_002dchess_002dwest">Command:
     <strong>emacspeak-chess-west</strong></dt>
