--- a/manual/emacspeak_002dcomint.html
+++ b/manual/emacspeak_002dcomint.html
@@ -111,36 +111,8 @@ set the current local value to the result.
       </div>
     </dd>
   </dl><span id=
-  "emacspeak_002dtoggle_002dcomint_002doutput_002dmonitor"></span>
-  <h4 class="subsubsection">12.36.1.3
-  emacspeak-toggle-comint-output-monitor</h4>
-  <dl>
-    <dt id=
-    "index-emacspeak_002dtoggle_002dcomint_002doutput_002dmonitor">
-    Command:
-    <strong>emacspeak-toggle-comint-output-monitor</strong>
-    <em>(&amp;optional prefix)</em></dt>
-    <dd>
-      <dl compact="compact">
-        <dt><kbd>C-e o</kbd></dt>
-        <dd><span id="index-C_002de-o"></span></dd>
-        <dt><kbd>&lt;fn&gt; o</kbd></dt>
-        <dd><span id="index-_003cfn_003e-o"></span></dd>
-      </dl><span id=
-      "index-emacspeak_002dtoggle_002dcomint_002doutput_002dmonitor-1"></span>
-      <div class="format">
-        <pre class=
-        "format">Toggle state of Emacspeak comint monitor.
-When turned on, comint output is automatically spoken.  Turn this on if
-you want your shell to speak its results.  Interactive
-PREFIX arg means toggle the global default value, and then
-set the current local value to the result.
-</pre>
-      </div>
-    </dd>
-  </dl><span id=
   "emacspeak_002dtoggle_002dinaudible_002dor_002dcomint_002dautospeak"></span>
-  <h4 class="subsubsection">12.36.1.4
+  <h4 class="subsubsection">12.36.1.3
   emacspeak-toggle-inaudible-or-comint-autospeak</h4>
   <dl>
     <dt id=
@@ -166,7 +138,7 @@ personality under point.
   </dl><span id="emacspeak_002dcomint-Options"></span>
   <h4 class="subsection">12.36.2 emacspeak-comint Options</h4>
   <dl>
-    <dt id="index-User-Option-109">Variable: <strong>User
+    <dt id="index-User-Option-104">Variable: <strong>User
     Option</strong> <em>emacspeak-comint-autospeak</em></dt>
     <dd>
       <p>Says if comint output is automatically spoken. You can use
@@ -175,7 +147,7 @@ personality under point.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-110">Variable: <strong>User
+    <dt id="index-User-Option-105">Variable: <strong>User
     Option</strong> <em>voice-comint-highlight-input</em></dt>
     <dd>
       <p>Personality used for comint-highlight-input This
@@ -184,25 +156,13 @@ personality under point.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-111">Variable: <strong>User
+    <dt id="index-User-Option-106">Variable: <strong>User
     Option</strong> <em>voice-comint-highlight-prompt</em></dt>
     <dd>
       <p>Personality used for comint-highlight-prompt This
-      personality uses voice-monotone whose effect can be changed
-      globally by customizing voice-monotone-settings.</p>
+      personality uses voice-lighten whose effect can be changed
+      globally by customizing voice-lighten-settings.</p>
     </dd>
   </dl>
-  <hr />
-  <div class="header">
-    <p>Next: <a href="emacspeak_002dcompany.html" accesskey="n"
-    rel="next">emacspeak-company</a>, Previous: <a href=
-    "emacspeak_002dcmuscheme.html" accesskey="p" rel=
-    "prev">emacspeak-cmuscheme</a>, Up: <a href=
-    "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
-    "up">Emacspeak Commands And Options</a> &nbsp; [<a href=
-    "index.html#SEC_Contents" title="Table of contents" rel=
-    "contents">Contents</a>][<a href="Concept-Index.html" title=
-    "Index" rel="index">Index</a>]</p>
-  </div>
 </body>
 </html>
