--- a/manual/emacspeak_002ddired.html
+++ b/manual/emacspeak_002ddired.html
@@ -66,10 +66,7 @@
   <hr />
   <span id="emacspeak_002ddired-1"></span>
   <h3 class="section">12.47 emacspeak-dired</h3>
-  <p>This module speech enables dired. It reduces the amount of
-  speech you hear: Typically you hear the file names as you move
-  through the dired buffer Voicification is used to indicate
-  directories, marked files etc.</p><span id=
+  <p>This module speech enables dired.</p><span id=
   "Emacspeak_002dDired-Commands"></span>
   <h4 class="subsection">12.47.1 Emacspeak-Dired
   Commands</h4><span id=
@@ -380,7 +377,7 @@ Optional interactive prefix arg shuffles playlist.
   </dl><span id="emacspeak_002ddired-Options"></span>
   <h4 class="subsection">12.47.2 emacspeak-dired Options</h4>
   <dl>
-    <dt id="index-User-Option-167">Variable: <strong>User
+    <dt id="index-User-Option-162">Variable: <strong>User
     Option</strong> <em>voice-dired-broken-symlink</em></dt>
     <dd>
       <p>Personality used for dired-broken-symlink This personality
@@ -389,7 +386,7 @@ Optional interactive prefix arg shuffles playlist.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-168">Variable: <strong>User
+    <dt id="index-User-Option-163">Variable: <strong>User
     Option</strong> <em>voice-dired-directory</em></dt>
     <dd>
       <p>Personality used for dired-directory This personality uses
@@ -398,7 +395,7 @@ Optional interactive prefix arg shuffles playlist.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-169">Variable: <strong>User
+    <dt id="index-User-Option-164">Variable: <strong>User
     Option</strong> <em>voice-dired-flagged</em></dt>
     <dd>
       <p>Personality used for dired-flagged This personality uses
@@ -407,7 +404,7 @@ Optional interactive prefix arg shuffles playlist.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-170">Variable: <strong>User
+    <dt id="index-User-Option-165">Variable: <strong>User
     Option</strong> <em>voice-dired-header</em></dt>
     <dd>
       <p>Personality used for dired-header This personality uses
@@ -416,7 +413,7 @@ Optional interactive prefix arg shuffles playlist.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-171">Variable: <strong>User
+    <dt id="index-User-Option-166">Variable: <strong>User
     Option</strong> <em>voice-dired-ignored</em></dt>
     <dd>
       <p>Personality used for dired-ignored This personality uses
@@ -425,7 +422,7 @@ Optional interactive prefix arg shuffles playlist.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-172">Variable: <strong>User
+    <dt id="index-User-Option-167">Variable: <strong>User
     Option</strong> <em>voice-dired-mark</em></dt>
     <dd>
       <p>Personality used for dired-mark This personality uses
@@ -434,7 +431,7 @@ Optional interactive prefix arg shuffles playlist.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-173">Variable: <strong>User
+    <dt id="index-User-Option-168">Variable: <strong>User
     Option</strong> <em>voice-dired-marked</em></dt>
     <dd>
       <p>Personality used for dired-marked This personality uses
@@ -443,7 +440,7 @@ Optional interactive prefix arg shuffles playlist.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-174">Variable: <strong>User
+    <dt id="index-User-Option-169">Variable: <strong>User
     Option</strong> <em>voice-dired-perm-write</em></dt>
     <dd>
       <p>Personality used for dired-perm-write This personality
@@ -452,7 +449,7 @@ Optional interactive prefix arg shuffles playlist.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-175">Variable: <strong>User
+    <dt id="index-User-Option-170">Variable: <strong>User
     Option</strong> <em>voice-dired-set-id</em></dt>
     <dd>
       <p>Personality used for dired-set-id This personality uses
@@ -461,7 +458,7 @@ Optional interactive prefix arg shuffles playlist.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-176">Variable: <strong>User
+    <dt id="index-User-Option-171">Variable: <strong>User
     Option</strong> <em>voice-dired-special</em></dt>
     <dd>
       <p>Personality used for dired-special This personality uses
@@ -470,7 +467,7 @@ Optional interactive prefix arg shuffles playlist.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-177">Variable: <strong>User
+    <dt id="index-User-Option-172">Variable: <strong>User
     Option</strong> <em>voice-dired-symlink</em></dt>
     <dd>
       <p>Personality used for dired-symlink This personality uses
@@ -479,7 +476,7 @@ Optional interactive prefix arg shuffles playlist.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-178">Variable: <strong>User
+    <dt id="index-User-Option-173">Variable: <strong>User
     Option</strong> <em>voice-dired-warning</em></dt>
     <dd>
       <p>Personality used for dired-warning This personality uses
