--- a/manual/emacspeak_002dfiltertext.html
+++ b/manual/emacspeak_002dfiltertext.html
@@ -69,14 +69,8 @@
   <p>It is often useful to view the results of filtering large
   amounts of text.;;; Typically you do this with various
   combinations of grep and friends. When doing so it requires
-  explicit effort to not destroy the original text being filtered.
-  This module provides a textfilter utility that: A) Copies over
-  the selected text to a special filtertext buffer B) Implements a
-  filtertext mode for that buffer that allows easy application of
-  filters C: Provides commands for reverting to the original
-  unfiltered text D: Provides commands for saving results from
-  intermediate filters.</p><span id=
-  "Emacspeak_002dFiltertext-Commands"></span>
+  explicit effort to not destroy the original text being
+  filtered.</p><span id="Emacspeak_002dFiltertext-Commands"></span>
   <h4 class="subsection">12.75.1 Emacspeak-Filtertext
   Commands</h4><span id="emacspeak_002dfiltertext-2"></span>
   <h4 class="subsubsection">12.75.1.1 emacspeak-filtertext</h4>
