--- a/manual/emacspeak_002dflyspell.html
+++ b/manual/emacspeak_002dflyspell.html
@@ -68,30 +68,17 @@
   <h3 class="section">12.79 emacspeak-flyspell</h3>
   <p>This module speech enables flyspell. it loads flyspell-correct
   if available, And when loading flyspell-correct sets up that
-  module to use one of three supported correction styles:</p>
-  <ul>
-    <li>ido: IDO-like completion with C-s and C-r moving through
-    choices.</li>
-    <li>popup:Use up and down arrows to move through
-    corrections.</li>
-    <li>helm: A helm interface for picking amongst
-    corrections.</li>
-  </ul>
-  <p>See documentation for package flyspell-correct for additional
-  details.</p>
-  <p>Use Customization emacspeak-flyspell-correct to pick between
-  ido, popup and helm.</p><span id=
-  "emacspeak_002dflyspell-Options"></span>
+  module</p><span id="emacspeak_002dflyspell-Options"></span>
   <h4 class="subsection">12.79.1 emacspeak-flyspell Options</h4>
   <dl>
-    <dt id="index-User-Option-276">Variable: <strong>User
+    <dt id="index-User-Option-271">Variable: <strong>User
     Option</strong> <em>emacspeak-flyspell-correct</em></dt>
     <dd>
       <p>Correction style to use with flyspell.</p>
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-277">Variable: <strong>User
+    <dt id="index-User-Option-272">Variable: <strong>User
     Option</strong> <em>voice-flyspell-duplicate</em></dt>
     <dd>
       <p>Personality used for flyspell-duplicate This personality
@@ -100,7 +87,7 @@
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-278">Variable: <strong>User
+    <dt id="index-User-Option-273">Variable: <strong>User
     Option</strong> <em>voice-flyspell-incorrect</em></dt>
     <dd>
       <p>Personality used for flyspell-incorrect This personality
