--- a/manual/emacspeak_002dgridtext.html
+++ b/manual/emacspeak_002dgridtext.html
@@ -88,13 +88,7 @@
     <strong>emacspeak-gridtext-apply</strong> <em>(start end
     grid)</em></dt>
     <dd>
-      <dl compact="compact">
-        <dt><kbd>C-e # a</kbd></dt>
-        <dd><span id="index-C_002de-_0023-a"></span></dd>
-        <dt><kbd>&lt;fn&gt; # a</kbd></dt>
-        <dd><span id="index-_003cfn_003e-_0023-a"></span></dd>
-      </dl><span id=
-      "index-emacspeak_002dgridtext_002dapply-1"></span>
+      <span id="index-emacspeak_002dgridtext_002dapply-1"></span>
       <div class="format">
         <pre class="format">Apply grid to region.
 
@@ -108,13 +102,7 @@
     <dt id="index-emacspeak_002dgridtext_002dload">Command:
     <strong>emacspeak-gridtext-load</strong> <em>(file)</em></dt>
     <dd>
-      <dl compact="compact">
-        <dt><kbd>C-e # l</kbd></dt>
-        <dd><span id="index-C_002de-_0023-l"></span></dd>
-        <dt><kbd>&lt;fn&gt; # l</kbd></dt>
-        <dd><span id="index-_003cfn_003e-_0023-l"></span></dd>
-      </dl><span id=
-      "index-emacspeak_002dgridtext_002dload-1"></span>
+      <span id="index-emacspeak_002dgridtext_002dload-1"></span>
       <div class="format">
         <pre class="format">Load saved grid settings.
 
@@ -128,13 +116,7 @@
     <dt id="index-emacspeak_002dgridtext_002dsave">Command:
     <strong>emacspeak-gridtext-save</strong> <em>(file)</em></dt>
     <dd>
-      <dl compact="compact">
-        <dt><kbd>C-e # s</kbd></dt>
-        <dd><span id="index-C_002de-_0023-s"></span></dd>
-        <dt><kbd>&lt;fn&gt; # s</kbd></dt>
-        <dd><span id="index-_003cfn_003e-_0023-s"></span></dd>
-      </dl><span id=
-      "index-emacspeak_002dgridtext_002dsave-1"></span>
+      <span id="index-emacspeak_002dgridtext_002dsave-1"></span>
       <div class="format">
         <pre class="format">Save out grid settings.
 
