--- a/manual/emacspeak_002dhydra.html
+++ b/manual/emacspeak_002dhydra.html
@@ -65,10 +65,7 @@
   </div>
   <hr />
   <span id="emacspeak_002dhydra-1"></span>
-  <h3 class="section">12.98 emacspeak-hydra</h3>
-  <p>Speech-enable package hydra: For uses of hydra see module See
-  <a href=
-  "emacspeak_002dmuggles.html">emacspeak-muggles</a>.</p><span id=
+  <h3 class="section">12.98 emacspeak-hydra</h3><span id=
   "Emacspeak_002dHydra-Commands"></span>
   <h4 class="subsection">12.98.1 Emacspeak-Hydra
   Commands</h4><span id=
@@ -85,6 +82,52 @@
         <pre class="format">Toggle state of hydra-is-helpful
 </pre>
       </div>
+    </dd>
+  </dl><span id="emacspeak_002dhydra-Options"></span>
+  <h4 class="subsection">12.98.2 emacspeak-hydra Options</h4>
+  <dl>
+    <dt id="index-User-Option-366">Variable: <strong>User
+    Option</strong> <em>voice-hydra-face-amaranth</em></dt>
+    <dd>
+      <p>Personality used for hydra-face-amaranth This personality
+      uses voice-animate whose effect can be changed globally by
+      customizing voice-animate-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-367">Variable: <strong>User
+    Option</strong> <em>voice-hydra-face-blue</em></dt>
+    <dd>
+      <p>Personality used for hydra-face-blue This personality uses
+      voice-lighten whose effect can be changed globally by
+      customizing voice-lighten-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-368">Variable: <strong>User
+    Option</strong> <em>voice-hydra-face-pink</em></dt>
+    <dd>
+      <p>Personality used for hydra-face-pink This personality uses
+      voice-bolden-medium whose effect can be changed globally by
+      customizing voice-bolden-medium-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-369">Variable: <strong>User
+    Option</strong> <em>voice-hydra-face-red</em></dt>
+    <dd>
+      <p>Personality used for hydra-face-red This personality uses
+      voice-bolden whose effect can be changed globally by
+      customizing voice-bolden-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-370">Variable: <strong>User
+    Option</strong> <em>voice-hydra-face-teal</em></dt>
+    <dd>
+      <p>Personality used for hydra-face-teal This personality uses
+      voice-lighten-medium whose effect can be changed globally by
+      customizing voice-lighten-medium-settings.</p>
     </dd>
   </dl>
 </body>
