--- a/manual/emacspeak_002dlibrivox.html
+++ b/manual/emacspeak_002dlibrivox.html
@@ -74,18 +74,7 @@
   Librivox client.</p><span id="Usage-1"></span>
   <h4 class="subsection">12.111.1 Usage</h4>
   <p>main entry point is command <code>emacspeak-librivox</code>
-  bound to <kbd>C-; l</kbd>. This prompts with the following
-  choices:</p>
-  <ul>
-    <li><kbd>a</kbd> Author — Search by Author.</li>
-    <li><kbd>t</kbd> Title — Search by Title.</li>
-    <li><kbd>g</kbd> Genre — Search by Genre — with minibuffer
-    completion.</li>
-    <li><kbd>p</kbd> Play — Play a book.</li>
-    <li><kbd>d</kbd> Directory — Browse local cache.</li>
-  </ul>
-  <p>Search results are displayed in a Web page that provides
-  controls for accessing the book.</p><span id=
+  bound to <kbd>C-; l</kbd>.</p><span id=
   "Emacspeak_002dLibrivox-Commands"></span>
   <h4 class="subsection">12.111.2 Emacspeak-Librivox
   Commands</h4><span id="emacspeak_002dlibrivox-2"></span>
@@ -196,17 +185,5 @@ more results.
       <p>Location where we cache LIBRIVOX playlists.</p>
     </dd>
   </dl>
-  <hr />
-  <div class="header">
-    <p>Next: <a href="emacspeak_002dlispy.html" accesskey="n" rel=
-    "next">emacspeak-lispy</a>, Previous: <a href=
-    "emacspeak_002dkmacro.html" accesskey="p" rel=
-    "prev">emacspeak-kmacro</a>, Up: <a href=
-    "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
-    "up">Emacspeak Commands And Options</a> &nbsp; [<a href=
-    "index.html#SEC_Contents" title="Table of contents" rel=
-    "contents">Contents</a>][<a href="Concept-Index.html" title=
-    "Index" rel="index">Index</a>]</p>
-  </div>
 </body>
 </html>
