--- a/manual/emacspeak_002dmines.html
+++ b/manual/emacspeak_002dmines.html
@@ -67,25 +67,8 @@
   <span id="emacspeak_002dmines-1"></span>
   <h3 class="section">12.123 emacspeak-mines</h3>
   <p>MINES == Minesweeper game in emacs. The game itself provides a
-  fully keyboard driven interface. In addition, Emacspeak provides
-  these additional interactive commands:</p>
-  <ul>
-    <li><kbd>SPC</kbd> Speak current cell.</li>
-    <li><kbd>.</kbd> Speak neighbors of current cell.</li>
-    <li><kbd>,</kbd> Speak number of marks</li>
-    <li><kbd>a</kbd> Move to beginning of row.</li>
-    <li><kbd>e</kbd> Move to end of row.</li>
-    <li><kbd>g</kbd> Move to specified cell</li>
-    <li><kbd>s</kbd> Move to next uncovered cell.</li>
-    <li><kbd>/</kbd> Speak number of remaining uncovered
-    cells.</li>
-    <li><kbd>'</kbd> Speaks entire board.</li>
-  </ul>
-  <p>Speaking cell neighbors uses appropriate clause boundaries to
-  group related cells — neighbors are read left-to-right,
-  top-to-bottom. Moving to the left/right edge of the board
-  produces an appropriate auditory icon.</p><span id=
-  "Emacspeak_002dMines-Commands"></span>
+  fully keyboard driven interface. In addition, Emacspeak
+  provides</p><span id="Emacspeak_002dMines-Commands"></span>
   <h4 class="subsection">12.123.1 Emacspeak-Mines
   Commands</h4><span id=
   "emacspeak_002dmines_002dbeginning_002dof_002drow"></span>
@@ -234,17 +217,5 @@ to beginning of board before searching.
       </div>
     </dd>
   </dl>
-  <hr />
-  <div class="header">
-    <p>Next: <a href="emacspeak_002dmspools.html" accesskey="n"
-    rel="next">emacspeak-mspools</a>, Previous: <a href=
-    "emacspeak_002dmidge.html" accesskey="p" rel=
-    "prev">emacspeak-midge</a>, Up: <a href=
-    "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
-    "up">Emacspeak Commands And Options</a> &nbsp; [<a href=
-    "index.html#SEC_Contents" title="Table of contents" rel=
-    "contents">Contents</a>][<a href="Concept-Index.html" title=
-    "Index" rel="index">Index</a>]</p>
-  </div>
 </body>
 </html>
