--- a/manual/emacspeak_002docr.html
+++ b/manual/emacspeak_002docr.html
@@ -69,11 +69,7 @@
   <p>This module defines Emacspeak front-end to OCR. This module
   assumes that sane is installed and working for image acquisition,
   and that there is an OCR engine that can take acquired images and
-  produce text. Prerequisites: Sane installed and working.
-  scanimage to generate tiff files from scanner. tiffcp to compress
-  the tiff file. working ocr executable by default this module
-  assumes that the OCR executable is named "ocr"</p><span id=
-  "Emacspeak_002dOcr-Commands"></span>
+  produce text.</p><span id="Emacspeak_002dOcr-Commands"></span>
   <h4 class="subsection">12.132.1 Emacspeak-Ocr
   Commands</h4><span id="emacspeak_002docr-2"></span>
   <h4 class="subsubsection">12.132.1.1 emacspeak-ocr</h4>
