--- a/manual/emacspeak_002dvterm.html
+++ b/manual/emacspeak_002dvterm.html
@@ -128,8 +128,8 @@
     Option</strong> <em>voice-vterm-color-inverse-video</em></dt>
     <dd>
       <p>Personality used for vterm-color-inverse-video This
-      personality uses ’betty whose effect can be changed globally
-      by customizing ’betty-settings.</p>
+      personality uses voice-bolden whose effect can be changed
+      globally by customizing voice-bolden-settings.</p>
     </dd>
   </dl>
   <dl>
