--- a/manual/xbacklight.html
+++ b/manual/xbacklight.html
@@ -68,9 +68,8 @@
   <h3 class="section">12.231 xbacklight</h3>
   <p>Provide an emacs front-end to xbacklight. This is a tool that
   controls the brightness on laptops. To install xbacklight, sudo
-  apt-get install xbacklight</p>
-  <p>This module is most easily used in conjunction with hydra: M-x
-  package-install hydra</p><span id="Xbacklight-Commands"></span>
+  apt-get install xbacklight</p><span id=
+  "Xbacklight-Commands"></span>
   <h4 class="subsection">12.231.1 Xbacklight Commands</h4><span id=
   "xbacklight_002dblack"></span>
   <h4 class="subsubsection">12.231.1.1 xbacklight-black</h4>
