--- a/manual/Key-Index.html
+++ b/manual/Key-Index.html
@@ -177,11 +177,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "voice_002dsetup.html#index-_003cf1_003e-C_002dv"><code>&lt;f1&gt;
-      C-v</code></a>:</td>
+      "emacspeak_002dwizards.html#index-_003cf1_003e-C_002dv"><code>
+      &lt;f1&gt; C-v</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
-      "voice_002dsetup.html">voice-setup</a></td>
+      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
     </tr>
     <tr>
       <td></td>
@@ -236,33 +236,6 @@
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dspeak.html">emacspeak-speak</a></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td valign="top"><a href=
-      "emacspeak_002dgridtext.html#index-_003cfn_003e-_0023-a"><code>
-      &lt;fn&gt; # a</code></a>:</td>
-      <td>&nbsp;</td>
-      <td valign="top"><a href=
-      "emacspeak_002dgridtext.html">emacspeak-gridtext</a></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td valign="top"><a href=
-      "emacspeak_002dgridtext.html#index-_003cfn_003e-_0023-l"><code>
-      &lt;fn&gt; # l</code></a>:</td>
-      <td>&nbsp;</td>
-      <td valign="top"><a href=
-      "emacspeak_002dgridtext.html">emacspeak-gridtext</a></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td valign="top"><a href=
-      "emacspeak_002dgridtext.html#index-_003cfn_003e-_0023-s"><code>
-      &lt;fn&gt; # s</code></a>:</td>
-      <td>&nbsp;</td>
-      <td valign="top"><a href=
-      "emacspeak_002dgridtext.html">emacspeak-gridtext</a></td>
     </tr>
     <tr>
       <td></td>
@@ -503,15 +476,6 @@
       <td valign="top"><a href=
       "emacspeak_002dwizards.html#index-_003cfn_003e-_003cf1_003e"><code>
       &lt;fn&gt; &lt;f1&gt;</code></a>:</td>
-      <td>&nbsp;</td>
-      <td valign="top"><a href=
-      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td valign="top"><a href=
-      "emacspeak_002dwizards.html#index-_003cfn_003e-_003cinsert_003e">
-      <code>&lt;fn&gt; &lt;insert&gt;</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
@@ -1374,6 +1338,15 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
+      "dtk_002dspeak.html#index-_003cfn_003e-d-d"><code>&lt;fn&gt;
+      d d</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "dtk_002dspeak.html">dtk-speak</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
       "dtk_002dspeak.html#index-_003cfn_003e-d-f"><code>&lt;fn&gt;
       d f</code></a>:</td>
       <td>&nbsp;</td>
@@ -1823,11 +1796,10 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dcomint.html#index-_003cfn_003e-o"><code>&lt;fn&gt;
+      "emacspeak.html#index-_003cfn_003e-o"><code>&lt;fn&gt;
       o</code></a>:</td>
       <td>&nbsp;</td>
-      <td valign="top"><a href=
-      "emacspeak_002dcomint.html">emacspeak-comint</a></td>
+      <td valign="top"><a href="emacspeak.html">emacspeak</a></td>
     </tr>
     <tr>
       <td></td>
@@ -2453,15 +2425,6 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dwizards.html#index-_003cfn_003e-x-s"><code>&lt;fn&gt;
-      x s</code></a>:</td>
-      <td>&nbsp;</td>
-      <td valign="top"><a href=
-      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td valign="top"><a href=
       "emacspeak_002djabber.html#index-_003cfn_003e-x-SPC"><code>&lt;fn&gt;
       x SPC</code></a>:</td>
       <td>&nbsp;</td>
@@ -2615,11 +2578,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "voice_002dsetup.html#index-_003chelp_003e-C_002dv"><code>&lt;help&gt;
-      C-v</code></a>:</td>
+      "emacspeak_002dwizards.html#index-_003chelp_003e-C_002dv"><code>
+      &lt;help&gt; C-v</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
-      "voice_002dsetup.html">voice-setup</a></td>
+      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
     </tr>
     <tr>
       <td></td>
@@ -3528,33 +3491,6 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dgridtext.html#index-C_002de-_0023-a"><code>C-e
-      # a</code></a>:</td>
-      <td>&nbsp;</td>
-      <td valign="top"><a href=
-      "emacspeak_002dgridtext.html">emacspeak-gridtext</a></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td valign="top"><a href=
-      "emacspeak_002dgridtext.html#index-C_002de-_0023-l"><code>C-e
-      # l</code></a>:</td>
-      <td>&nbsp;</td>
-      <td valign="top"><a href=
-      "emacspeak_002dgridtext.html">emacspeak-gridtext</a></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td valign="top"><a href=
-      "emacspeak_002dgridtext.html#index-C_002de-_0023-s"><code>C-e
-      # s</code></a>:</td>
-      <td>&nbsp;</td>
-      <td valign="top"><a href=
-      "emacspeak_002dgridtext.html">emacspeak-gridtext</a></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td valign="top"><a href=
       "emacspeak_002dspeak.html#index-C_002de-_0024"><code>C-e
       $</code></a>:</td>
       <td>&nbsp;</td>
@@ -3808,15 +3744,6 @@
       <td valign="top"><a href=
       "emacspeak_002dwizards.html#index-C_002de-_003cf1_003e"><code>
       C-e &lt;f1&gt;</code></a>:</td>
-      <td>&nbsp;</td>
-      <td valign="top"><a href=
-      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td valign="top"><a href=
-      "emacspeak_002dwizards.html#index-C_002de-_003cinsert_003e"><code>
-      C-e &lt;insert&gt;</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
@@ -4808,6 +4735,15 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
+      "dtk_002dspeak.html#index-C_002de-d-d-1"><code>C-e d
+      d</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "dtk_002dspeak.html">dtk-speak</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
       "Speech-Output-Control.html#index-C_002de-d-DIGIT"><code>C-e
       d DIGIT</code></a>:</td>
       <td>&nbsp;</td>
@@ -5474,11 +5410,9 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dcomint.html#index-C_002de-o"><code>C-e
-      o</code></a>:</td>
+      "emacspeak.html#index-C_002de-o"><code>C-e o</code></a>:</td>
       <td>&nbsp;</td>
-      <td valign="top"><a href=
-      "emacspeak_002dcomint.html">emacspeak-comint</a></td>
+      <td valign="top"><a href="emacspeak.html">emacspeak</a></td>
     </tr>
     <tr>
       <td></td>
@@ -6177,15 +6111,6 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dwizards.html#index-C_002de-x-s"><code>C-e x
-      s</code></a>:</td>
-      <td>&nbsp;</td>
-      <td valign="top"><a href=
-      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td valign="top"><a href=
       "emacspeak_002djabber.html#index-C_002de-x-SPC"><code>C-e x
       SPC</code></a>:</td>
       <td>&nbsp;</td>
@@ -6347,11 +6272,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "voice_002dsetup.html#index-C_002dh-C_002dv"><code>C-h
+      "emacspeak_002dwizards.html#index-C_002dh-C_002dv"><code>C-h
       C-v</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
-      "voice_002dsetup.html">voice-setup</a></td>
+      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
     </tr>
     <tr>
       <td></td>
