--- a/manual/emacspeak_002dmuggles.html
+++ b/manual/emacspeak_002dmuggles.html
@@ -70,48 +70,12 @@
   implements no new functionality — contrast with
   emacspeak-wizards. Instead, it uses package hydra to provide
   convenience key-bindings that access existing Emacspeak
-  functionality. You need to install package Hydra first:
-  ‘<samp>M-x package-install hydra</samp>’.</p>
-  <p>Note that on newer versions of Emacs, loading this module will
-  attempt to automatically install package hydra if it is not
-  found.</p><span id="Using-Hydras"></span>
-  <h4 class="subsection">12.125.1 Using Hydras</h4>
-  <p>See the high-level documentation for the Hydra package by
-  executing <kbd>C-h C-j</kbd> hydra <kbd>RET</kbd>. The
-  documentation in this section uses the same terminology as shown
-  in the hydra package documentation.</p><span id=
-  "Implemented-Muggles"></span>
-  <h4 class="subsection">12.125.2 Implemented Muggles</h4>
-  <ul>
-    <li>Brightness: <kbd>print</kbd> Control display brightness
-    using xbacklight.</li>
-    <li>Navigate: <kbd>s-n</kbd> Navigate with ease.</li>
-    <li>org-mode structure nav: <kbd>C-c C-SPC</kbd> Structure
-    navigation for org-mode.</li>
-    <li>org-mode tables: <kbd>C-c t</kbd> Table UI for org-mode
-    tables.</li>
-    <li>hideshow: C-, h Provide HideShow bindings.</li>
-    <li>toggle-option: <kbd>C-c o</kbd> Single binding for toggling
-    options.</li>
-    <li>Repeatable-Yank: <kbd>C-y</kbd> Smart yank</li>
-    <li>Vuiet Explorer: <kbd>C-; v</kbd> Vuiet Music Explorer and
-    Player</li>
-    <li>undo-only/undo-redo: <kbd>C-/</kbd> Undo-only on
-    <kbd>/</kbd> and undo-redo on <kbd>\</kbd></li>
-    <li>emacspeak-maths <kbd>s-SPC</kbd> Speak and browse
-    math.</li>
-  </ul>
-  <p>Emacspeak automatically speaks Hydra hints when displayed. To
-  silence all Hydra hints, set hydra-is-helpful to nil. To
-  temporarily silence speaking of Hydra hints, Muggles can bind
-  command <code>emacspeak-hydra-toggle-talkative</code>. As an
-  example, Muggle ‘<samp>ViewMode</samp>’ binds <code>s</code> to
-  this command.</p><span id=
+  functionality.</p><span id=
   "Emacspeak_002dMuggles-Commands"></span>
-  <h4 class="subsection">12.125.3 Emacspeak-Muggles
+  <h4 class="subsection">12.125.1 Emacspeak-Muggles
   Commands</h4><span id=
   "emacspeak_002dmuggles_002dbrightness_002fbody"></span>
-  <h4 class="subsubsection">12.125.3.1
+  <h4 class="subsubsection">12.125.1.1
   emacspeak-muggles-brightness/body</h4>
   <dl>
     <dt id="index-emacspeak_002dmuggles_002dbrightness_002fbody">
@@ -146,7 +110,7 @@ The body can be accessed via ‘emacspeak-muggles-brightness/body’.
     </dd>
   </dl><span id=
   "emacspeak_002dmuggles_002dhideshow_002fbody"></span>
-  <h4 class="subsubsection">12.125.3.2
+  <h4 class="subsubsection">12.125.1.2
   emacspeak-muggles-hideshow/body</h4>
   <dl>
     <dt id="index-emacspeak_002dmuggles_002dhideshow_002fbody">
@@ -179,7 +143,7 @@ The body can be accessed via ‘emacspeak-muggles-hideshow/body’.
       </div>
     </dd>
   </dl><span id="emacspeak_002dmuggles_002dido_002dyank"></span>
-  <h4 class="subsubsection">12.125.3.3
+  <h4 class="subsubsection">12.125.1.3
   emacspeak-muggles-ido-yank</h4>
   <dl>
     <dt id="index-emacspeak_002dmuggles_002dido_002dyank">Command:
@@ -197,7 +161,7 @@ The body can be accessed via ‘emacspeak-muggles-hideshow/body’.
     </dd>
   </dl><span id=
   "emacspeak_002dmuggles_002dlispy_002dor_002dsp"></span>
-  <h4 class="subsubsection">12.125.3.4
+  <h4 class="subsubsection">12.125.1.4
   emacspeak-muggles-lispy-or-sp</h4>
   <dl>
     <dt id="index-emacspeak_002dmuggles_002dlispy_002dor_002dsp">
@@ -212,7 +176,7 @@ The body can be accessed via ‘emacspeak-muggles-hideshow/body’.
     </dd>
   </dl><span id=
   "emacspeak_002dmuggles_002dmaths_002dnavigator_002fbody"></span>
-  <h4 class="subsubsection">12.125.3.5
+  <h4 class="subsubsection">12.125.1.5
   emacspeak-muggles-maths-navigator/body</h4>
   <dl>
     <dt id=
@@ -248,7 +212,7 @@ The body can be accessed via ‘emacspeak-muggles-maths-navigator/body’.
     </dd>
   </dl><span id=
   "emacspeak_002dmuggles_002dnavigate_002fbody"></span>
-  <h4 class="subsubsection">12.125.3.6
+  <h4 class="subsubsection">12.125.1.6
   emacspeak-muggles-navigate/body</h4>
   <dl>
     <dt id="index-emacspeak_002dmuggles_002dnavigate_002fbody">
@@ -287,7 +251,7 @@ The body can be accessed via ‘emacspeak-muggles-navigate/body’.
     </dd>
   </dl><span id=
   "emacspeak_002dmuggles_002dorg_002dnav_002fbody"></span>
-  <h4 class="subsubsection">12.125.3.7
+  <h4 class="subsubsection">12.125.1.7
   emacspeak-muggles-org-nav/body</h4>
   <dl>
     <dt id="index-emacspeak_002dmuggles_002dorg_002dnav_002fbody">
@@ -316,7 +280,7 @@ The body can be accessed via ‘emacspeak-muggles-org-nav/body’.
     </dd>
   </dl><span id=
   "emacspeak_002dmuggles_002dorg_002dtable_002fbody"></span>
-  <h4 class="subsubsection">12.125.3.8
+  <h4 class="subsubsection">12.125.1.8
   emacspeak-muggles-org-table/body</h4>
   <dl>
     <dt id=
@@ -348,7 +312,7 @@ The body can be accessed via ‘emacspeak-muggles-org-table/body’.
     </dd>
   </dl><span id=
   "emacspeak_002dmuggles_002dtoggle_002doption_002fbody"></span>
-  <h4 class="subsubsection">12.125.3.9
+  <h4 class="subsubsection">12.125.1.9
   emacspeak-muggles-toggle-option/body</h4>
   <dl>
     <dt id=
@@ -389,7 +353,7 @@ The body can be accessed via ‘emacspeak-muggles-toggle-option/body’.
     </dd>
   </dl><span id=
   "emacspeak_002dmuggles_002dundo_002donly_002fundo_002dredo_002fbody"></span>
-  <h4 class="subsubsection">12.125.3.10
+  <h4 class="subsubsection">12.125.1.10
   emacspeak-muggles-undo-only/undo-redo/body</h4>
   <dl>
     <dt id=
@@ -417,7 +381,7 @@ The body can be accessed via ‘emacspeak-muggles-undo-only/undo-redo/body’.
       </div>
     </dd>
   </dl><span id="emacspeak_002dmuggles_002dvuiet_002fbody"></span>
-  <h4 class="subsubsection">12.125.3.11
+  <h4 class="subsubsection">12.125.1.11
   emacspeak-muggles-vuiet/body</h4>
   <dl>
     <dt id="index-emacspeak_002dmuggles_002dvuiet_002fbody">
@@ -462,7 +426,7 @@ The body can be accessed via ‘emacspeak-muggles-vuiet/body’.
     </dd>
   </dl><span id=
   "emacspeak_002dmuggles_002dyank_002dpop_002fbody"></span>
-  <h4 class="subsubsection">12.125.3.12
+  <h4 class="subsubsection">12.125.1.12
   emacspeak-muggles-yank-pop/body</h4>
   <dl>
     <dt id="index-emacspeak_002dmuggles_002dyank_002dpop_002fbody">
