--- a/manual/emacspeak_002dsounds.html
+++ b/manual/emacspeak_002dsounds.html
@@ -67,23 +67,7 @@
   <span id="emacspeak_002dsounds-1"></span>
   <h3 class="section">12.172 emacspeak-sounds</h3>
   <p>This module provides the interface for generating auditory
-  icons in emacspeak. Design goal: 1) Auditory icons should be used
-  to provide additional feedback, not as a gimmick. 2) The
-  interface should be usable at all times without the icons: e.g.
-  when on a machine without a sound card. 3) General principle for
-  when to use an icon: Convey information about events taking place
-  in parallel. For instance, if making a selection automatically
-  moves the current focus to the next choice, We speak the next
-  choice, while indicating the fact that something was selected
-  with a sound cue. This interface will assume the availability of
-  a shell command "play" that can take one or more sound files and
-  play them. This module will also provide a mapping between names
-  in the elisp world and actual sound files. Modules that wish to
-  use auditory icons should use these names, instead of actual file
-  names. As of Emacspeak 13.0, this module defines a themes
-  architecture for auditory icons. Sound files corresponding to a
-  given theme are found in appropriate subdirectories of
-  emacspeak-sounds-directory</p><span id=
+  icons in emacspeak.</p><span id=
   "Emacspeak_002dSounds-Commands"></span>
   <h4 class="subsection">12.172.1 Emacspeak-Sounds
   Commands</h4><span id="emacspeak_002daudio_002dsetup"></span>
@@ -175,17 +159,5 @@ Optional interactive PREFIX arg toggles global value.
       <p>Default theme for auditory icons.</p>
     </dd>
   </dl>
-  <hr />
-  <div class="header">
-    <p>Next: <a href="emacspeak_002dspeak.html" accesskey="n" rel=
-    "next">emacspeak-speak</a>, Previous: <a href=
-    "emacspeak_002dsolitaire.html" accesskey="p" rel=
-    "prev">emacspeak-solitaire</a>, Up: <a href=
-    "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
-    "up">Emacspeak Commands And Options</a> &nbsp; [<a href=
-    "index.html#SEC_Contents" title="Table of contents" rel=
-    "contents">Contents</a>][<a href="Concept-Index.html" title=
-    "Index" rel="index">Index</a>]</p>
-  </div>
 </body>
 </html>
