--- a/manual/extra_002dmuggles.html
+++ b/manual/extra_002dmuggles.html
@@ -70,40 +70,11 @@
   <p>This module implements no new functionality — contrast with
   emacspeak-wizards. Instead, it uses package hydra to provide
   convenience key-bindings that access existing Emacspeak
-  functionality. You need to install package Hydra first:
-  ‘<samp>M-x package-install hydra</samp>’.</p>
-  <p>Note that on newer versions of Emacs, loading this module will
-  attempt to automatically install package hydra if it is not
-  found.</p><span id="Using-Hydras-1"></span>
-  <h4 class="subsection">12.216.1 Using Hydras</h4>
-  <p>See the high-level documentation for the Hydra package by
-  executing <kbd>C-h C-j</kbd> hydra <kbd>RET</kbd>. The
-  documentation in this section uses the same terminology as shown
-  in the hydra package documentation.</p><span id=
-  "Extra-Muggles"></span>
-  <h4 class="subsection">12.216.2 Extra Muggles</h4>
-  <ul>
-    <li>View-Mode: <kbd>C-. v</kbd> Temporarily behave like
-    view-mode.</li>
-    <li>SmartParens: <kbd>C-c ,</kbd> Smart Parens</li>
-    <li>m-player: <kbd>s-m</kbd> Emacspeak-M-Player Commands</li>
-    <li>m-player: <kbd>s-;</kbd> Emacspeak-M-Player muggle</li>
-    <li>pianobar: <kbd>s-'</kbd> Emacspeak-M-pianobar Commands</li>
-    <li>origami: C-, / Origami bindings.</li>
-    <li>outliner: &lt;C-c .&gt; Bindings from
-    outline-minor-mode.</li>
-    <li>Info-Summary: &lt;?&gt; in Info Info Summary Muggle</li>
-  </ul>
-  <p>Emacspeak automatically speaks Hydra hints when displayed. To
-  silence all Hydra hints, set hydra-is-helpful to nil. To
-  temporarily silence speaking of Hydra hints, Muggles can bind
-  command <code>emacspeak-hydra-toggle-talkative</code>. As an
-  example, Muggle ‘<samp>ViewMode</samp>’ binds <code>s</code> to
-  this command.</p><span id="Extra_002dMuggles-Commands"></span>
-  <h4 class="subsection">12.216.3 Extra-Muggles
+  functionality.</p><span id="Extra_002dMuggles-Commands"></span>
+  <h4 class="subsection">12.216.1 Extra-Muggles
   Commands</h4><span id=
   "emacspeak_002dmuggles_002demacspeak_002dm_002dplayer_002dmode_002dmap_002dcmd"></span>
-  <h4 class="subsubsection">12.216.3.1
+  <h4 class="subsubsection">12.216.1.1
   emacspeak-muggles-emacspeak-m-player-mode-map-cmd</h4>
   <dl>
     <dt id=
@@ -124,7 +95,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dmuggles_002dinfo_002dsummary_002fbody"></span>
-  <h4 class="subsubsection">12.216.3.2
+  <h4 class="subsubsection">12.216.1.2
   emacspeak-muggles-info-summary/body</h4>
   <dl>
     <dt id=
@@ -188,7 +159,7 @@ The body can be accessed via ‘emacspeak-muggles-info-summary/body’.
     </dd>
   </dl><span id=
   "emacspeak_002dmuggles_002dm_002dplayer_002fbody"></span>
-  <h4 class="subsubsection">12.216.3.3
+  <h4 class="subsubsection">12.216.1.3
   emacspeak-muggles-m-player/body</h4>
   <dl>
     <dt id="index-emacspeak_002dmuggles_002dm_002dplayer_002fbody">
@@ -266,7 +237,7 @@ The body can be accessed via ‘emacspeak-muggles-m-player/body’.
     </dd>
   </dl><span id=
   "emacspeak_002dmuggles_002doutliner_002fbody"></span>
-  <h4 class="subsubsection">12.216.3.4
+  <h4 class="subsubsection">12.216.1.4
   emacspeak-muggles-outliner/body</h4>
   <dl>
     <dt id="index-emacspeak_002dmuggles_002doutliner_002fbody">
@@ -312,7 +283,7 @@ The body can be accessed via ‘emacspeak-muggles-outliner/body’.
     </dd>
   </dl><span id=
   "emacspeak_002dmuggles_002dpianobar_002dkey_002dmap_002dcmd"></span>
-  <h4 class="subsubsection">12.216.3.5
+  <h4 class="subsubsection">12.216.1.5
   emacspeak-muggles-pianobar-key-map-cmd</h4>
   <dl>
     <dt id=
@@ -332,7 +303,7 @@ The body can be accessed via ‘emacspeak-muggles-outliner/body’.
     </dd>
   </dl><span id=
   "emacspeak_002dmuggles_002dsmartparens_002fbody"></span>
-  <h4 class="subsubsection">12.216.3.6
+  <h4 class="subsubsection">12.216.1.6
   emacspeak-muggles-smartparens/body</h4>
   <dl>
     <dt id="index-emacspeak_002dmuggles_002dsmartparens_002fbody">
@@ -384,7 +355,7 @@ The body can be accessed via ‘emacspeak-muggles-smartparens/body’.
       </div>
     </dd>
   </dl><span id="emacspeak_002dmuggles_002dview_002fbody"></span>
-  <h4 class="subsubsection">12.216.3.7
+  <h4 class="subsubsection">12.216.1.7
   emacspeak-muggles-view/body</h4>
   <dl>
     <dt id="index-emacspeak_002dmuggles_002dview_002fbody">Command:
@@ -457,7 +428,7 @@ The body can be accessed via ‘emacspeak-muggles-view/body’.
       </div>
     </dd>
   </dl><span id="emacspeak_002dorigami_002fbody"></span>
-  <h4 class="subsubsection">12.216.3.8 emacspeak-origami/body</h4>
+  <h4 class="subsubsection">12.216.1.8 emacspeak-origami/body</h4>
   <dl>
     <dt id="index-emacspeak_002dorigami_002fbody">Command:
     <strong>emacspeak-origami/body</strong></dt>
