--- a/manual/ladspa.html
+++ b/manual/ladspa.html
@@ -67,12 +67,7 @@
   to inspect Ladspa Plugins, And invoke them easily from Ladspa
   host applications such as MPlayer. See <a href=
   "http://emacspeak.blogspot.com/2015/12/a-ladspa-work-bench-for-emacspeak.html">
-  http://emacspeak.blogspot.com/2015/12/a-ladspa-work-bench-for-emacspeak.html</a>
-  Some Ladspa Packages that provide plugins: sudo apt-get install
-  zam-plugins wah-plugins vco-plugins tap-plugins swh-plugins
-  rev-plugins mcp-plugins liquidsoap-plugin-ladspa
-  ladspa-foo-plugins invada-studio-plugins-ladspa
-  fil-plugins</p><span id="Ladspa-Commands"></span>
+  http://emacspeak.blogspot.com/2015/12/a-ladspa-work-bench-for-emacspeak.html</a></p><span id="Ladspa-Commands"></span>
   <h4 class="subsection">12.220.1 Ladspa Commands</h4><span id=
   "ladspa-2"></span>
   <h4 class="subsubsection">12.220.1.1 ladspa</h4>
